[package]
name = "watchdogrs"
version = "0.1.0"
authors = ["boris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = { version = "0.1.0-beta.3", features = ["process"] }
tokio = { version = "~0.2", features = ["macros", "stream", "time"] }
futures = "0.3"
clap = "2.33"
ctrlc = "3.1.4"
